# twentyquestions-mtg

./: .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
exploratory/: scryfall_data.ipynb  test.json
src/template-python/: placeholder.py
src/tqmtg/: run.py
